--- a/Description
+++ b/Description
@@ -1,1 +1,6 @@
+Secuirty for All
 
+Algorithm used - Minutiae Point Extraction/Facial landmarks
+Languages used - HTML\CSS\JavaScript\Python
+Software Used  - Pycharm\Atom-TextEditor\Xampp
+Database       - Phpmyadmin
